[gd_scene load_steps=5 format=3 uid="uid://lnkboql8br3i"]

[ext_resource type="Script" path="res://test_gui/drink_rating_gui/served_drink.gd" id="1_nrpm4"]
[ext_resource type="Script" path="res://test_gui/drink_rating_gui/target_drink.gd" id="2_3dfsx"]
[ext_resource type="Script" path="res://test_gui/drink_rating_gui/rating.gd" id="3_u0aoc"]

[sub_resource type="Theme" id="Theme_vcyt8"]

[node name="DrinkRatingGUI" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ServedDrink" type="Panel" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_nrpm4")

[node name="VBox" type="VBoxContainer" parent="Control/HBoxContainer/ServedDrink"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 85
text = "Served Drink"
horizontal_alignment = 1

[node name="Temperature" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Temperature"

[node name="TempSliderContainer" type="HBoxContainer" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2

[node name="TempSlider" type="HSlider" parent="Control/HBoxContainer/ServedDrink/VBox/TempSliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1

[node name="TempValue" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox/TempSliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="Astringency" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Astringency"

[node name="AstringencySliderContainer" type="HBoxContainer" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2

[node name="AstringencySlider" type="HSlider" parent="Control/HBoxContainer/ServedDrink/VBox/AstringencySliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1

[node name="AstringencyValue" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox/AstringencySliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="Sweetness" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Sweetness"

[node name="SweetnessSliderContainer" type="HBoxContainer" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2

[node name="SweetnessSlider" type="HSlider" parent="Control/HBoxContainer/ServedDrink/VBox/SweetnessSliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1

[node name="SweetnessValue" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox/SweetnessSliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="Florality" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Florality"

[node name="FloralitySliderContainer" type="HBoxContainer" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2

[node name="FloralitySlider" type="HSlider" parent="Control/HBoxContainer/ServedDrink/VBox/FloralitySliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1

[node name="FloralityValue" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox/FloralitySliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="Spicedness" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Spicedness"

[node name="SpicednessSliderContainer" type="HBoxContainer" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2

[node name="SpicednessSlider" type="HSlider" parent="Control/HBoxContainer/ServedDrink/VBox/SpicednessSliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1

[node name="SpicednessValue" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox/SpicednessSliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="Nuttyness" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Nuttyness"

[node name="NuttynessSliderContainer" type="HBoxContainer" parent="Control/HBoxContainer/ServedDrink/VBox"]
layout_mode = 2

[node name="NuttynessSlider" type="HSlider" parent="Control/HBoxContainer/ServedDrink/VBox/NuttynessSliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1

[node name="NuttynessValue" type="Label" parent="Control/HBoxContainer/ServedDrink/VBox/NuttynessSliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="TargetDrink" type="Panel" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_3dfsx")

[node name="VBox" type="VBoxContainer" parent="Control/HBoxContainer/TargetDrink"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 85
text = "Target Drink"
horizontal_alignment = 1

[node name="TemperatureTitleContainer" type="HBoxContainer" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2

[node name="Temperature" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox/TemperatureTitleContainer"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Temperature"

[node name="LowerBound" type="SpinBox" parent="Control/HBoxContainer/TargetDrink/VBox/TemperatureTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="UpperBound" type="SpinBox" parent="Control/HBoxContainer/TargetDrink/VBox/TemperatureTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="TempSliderContainer" type="HBoxContainer" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2

[node name="TempSlider" type="HSlider" parent="Control/HBoxContainer/TargetDrink/VBox/TempSliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1

[node name="TempValue" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox/TempSliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="AstringencyTitleContainer" type="HBoxContainer" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2

[node name="Astringency" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox/AstringencyTitleContainer"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Astringency"

[node name="LowerBound" type="SpinBox" parent="Control/HBoxContainer/TargetDrink/VBox/AstringencyTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="UpperBound" type="SpinBox" parent="Control/HBoxContainer/TargetDrink/VBox/AstringencyTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="AstringencySliderContainer" type="HBoxContainer" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2

[node name="AstringencySlider" type="HSlider" parent="Control/HBoxContainer/TargetDrink/VBox/AstringencySliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1

[node name="AstringencyValue" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox/AstringencySliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="SweetnessTitleContainer" type="HBoxContainer" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2

[node name="Sweetness" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox/SweetnessTitleContainer"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Sweetness"

[node name="LowerBound" type="SpinBox" parent="Control/HBoxContainer/TargetDrink/VBox/SweetnessTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="UpperBound" type="SpinBox" parent="Control/HBoxContainer/TargetDrink/VBox/SweetnessTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="SweetnessSliderContainer" type="HBoxContainer" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2

[node name="SweetnessSlider" type="HSlider" parent="Control/HBoxContainer/TargetDrink/VBox/SweetnessSliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1

[node name="SweetnessValue" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox/SweetnessSliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="FloralityTitleContainer" type="HBoxContainer" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2

[node name="Florality" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox/FloralityTitleContainer"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Florality"

[node name="LowerBound" type="SpinBox" parent="Control/HBoxContainer/TargetDrink/VBox/FloralityTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="UpperBound" type="SpinBox" parent="Control/HBoxContainer/TargetDrink/VBox/FloralityTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="FloralitySliderContainer" type="HBoxContainer" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2

[node name="FloralitySlider" type="HSlider" parent="Control/HBoxContainer/TargetDrink/VBox/FloralitySliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1

[node name="FloralityValue" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox/FloralitySliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="SpicednessTitleContainer" type="HBoxContainer" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2

[node name="Spicedness" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox/SpicednessTitleContainer"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Spicedness"

[node name="LowerBound" type="SpinBox" parent="Control/HBoxContainer/TargetDrink/VBox/SpicednessTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="UpperBound" type="SpinBox" parent="Control/HBoxContainer/TargetDrink/VBox/SpicednessTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="SpicednessSliderContainer" type="HBoxContainer" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2

[node name="SpicednessSlider" type="HSlider" parent="Control/HBoxContainer/TargetDrink/VBox/SpicednessSliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1

[node name="SpicednessValue" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox/SpicednessSliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="NuttynessTitleContainer" type="HBoxContainer" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2

[node name="Nuttyness" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox/NuttynessTitleContainer"]
layout_mode = 2
theme = SubResource("Theme_vcyt8")
theme_override_font_sizes/font_size = 40
text = "Nuttyness"

[node name="LowerBound" type="SpinBox" parent="Control/HBoxContainer/TargetDrink/VBox/NuttynessTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="UpperBound" type="SpinBox" parent="Control/HBoxContainer/TargetDrink/VBox/NuttynessTitleContainer"]
layout_mode = 2
max_value = 10.0
step = 0.1

[node name="NuttynessSliderContainer" type="HBoxContainer" parent="Control/HBoxContainer/TargetDrink/VBox"]
layout_mode = 2

[node name="NuttynessSlider" type="HSlider" parent="Control/HBoxContainer/TargetDrink/VBox/NuttynessSliderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 10.0
step = 0.1

[node name="NuttynessValue" type="Label" parent="Control/HBoxContainer/TargetDrink/VBox/NuttynessSliderContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"

[node name="Rating" type="Panel" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("3_u0aoc")

[node name="VBox" type="VBoxContainer" parent="Control/HBoxContainer/Rating"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/HBoxContainer/Rating/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 85
text = "Rating"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/HBoxContainer/Rating/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Rating : 0"

[connection signal="value_changed" from="Control/HBoxContainer/ServedDrink/VBox/TempSliderContainer/TempSlider" to="Control/HBoxContainer/ServedDrink" method="_on_temp_slider_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/ServedDrink/VBox/AstringencySliderContainer/AstringencySlider" to="Control/HBoxContainer/ServedDrink" method="_on_astringency_slider_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/ServedDrink/VBox/SweetnessSliderContainer/SweetnessSlider" to="Control/HBoxContainer/ServedDrink" method="_on_sweetness_slider_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/ServedDrink/VBox/FloralitySliderContainer/FloralitySlider" to="Control/HBoxContainer/ServedDrink" method="_on_florality_slider_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/ServedDrink/VBox/SpicednessSliderContainer/SpicednessSlider" to="Control/HBoxContainer/ServedDrink" method="_on_spicedness_slider_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/ServedDrink/VBox/NuttynessSliderContainer/NuttynessSlider" to="Control/HBoxContainer/ServedDrink" method="_on_nuttyness_slider_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/TargetDrink/VBox/TempSliderContainer/TempSlider" to="Control/HBoxContainer/TargetDrink" method="_on_temp_slider_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/TargetDrink/VBox/AstringencySliderContainer/AstringencySlider" to="Control/HBoxContainer/TargetDrink" method="_on_astringency_slider_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/TargetDrink/VBox/SweetnessSliderContainer/SweetnessSlider" to="Control/HBoxContainer/TargetDrink" method="_on_sweetness_slider_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/TargetDrink/VBox/FloralitySliderContainer/FloralitySlider" to="Control/HBoxContainer/TargetDrink" method="_on_florality_slider_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/TargetDrink/VBox/SpicednessSliderContainer/SpicednessSlider" to="Control/HBoxContainer/TargetDrink" method="_on_spicedness_slider_value_changed"]
[connection signal="value_changed" from="Control/HBoxContainer/TargetDrink/VBox/NuttynessSliderContainer/NuttynessSlider" to="Control/HBoxContainer/TargetDrink" method="_on_nuttyness_slider_value_changed"]
